# theseus

theseus/: Cargo.toml
theseus/src/event/: emit.rs  mod.rs
theseus_gui/: package.json  pnpm-lock.yaml
theseus_gui/src/: App.vue
theseus_gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
theseus_gui/src-tauri/capabilities/: migrated.json
theseus_gui/src-tauri/src/: main.rs
theseus_gui/src-tauri/src/api/: auth.rs
theseus_gui/src/components/ui/: InstanceCreationModal.vue  ModInstallModal.vue
theseus_gui/src/components/ui/tutorial/: StickyTitleBar.vue
theseus_gui/src/helpers/: jre.js  metadata.js  mr_auth.js  pack.js  process.js  profile.js  settings.js  state.js  tags.js  utils.js
theseus_playground/: Cargo.toml
