[package]
name = "theseus_gui"
version = "0.7.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", features = ["codegen"] }

[dependencies]
theseus = { path = "../../theseus", features = ["tauri"] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

tauri = { version = "2.0.0-beta.22", features = [ "devtools", "macos-private-api", "protocol-asset", "unstable", "webview-data-url"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-deep-link = "2.0.0-beta.7"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-os = "2.0.0-beta.6"
tauri-plugin-shell = "2.0.0-beta.7"

tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
tokio-stream = { version = "0.1", features = ["fs"] }
futures = "0.3"
daedalus = {version = "0.1.15", features = ["bincode"] }
chrono = "0.4.26"

dirs = "5.0.1"

url = "2.2"
uuid = { version = "1.1", features = ["serde", "v4"] }
os_info = "3.7.0"

tracing = "0.1.37"
tracing-error = "0.2.0"

sentry = "0.32.2"
sentry-rust-minidump = "0.7.0"

lazy_static = "1"
once_cell = "1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
window-shadows = "0.2.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
